[package]
name = "example_report"
version = "0.1.0"
edition = "2021"

[dependencies]
tera = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.30", features = ["derive"] }
pixeleagle-cli = { git = "https://github.com/vleue/PixelEagle-cli", features = ["blocking"], tag = "v0.3.0" }
